More steps towards a Fennel lib for Neovim

--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,12 @@
 = Aniseed
 
-== Neovim with a hint of Fennel
+== Sweeter Neovim with Fennel
 
 Write https://fennel-lang.org/[Fennel] code and have https://neovim.io/[Neovim] compile and execute it via Lua. Configure and control your Neovim through the wonders of lisp!
+
 This is mostly an experiment to see if I can replace my Neovim configuration in my https://github.com/Olical/dotfiles[dotfiles] as well as parts of https://github.com/Olical/conjure[Conjure] with Fennel.
+
+Your code is compiled ahead of time into Lua only if it has changed since you last compiled it. Aniseed also provides a few helper functions which I find useful, you may too!
 
 == Unlicenced
 
