Dev section and move todo up

--- a/README.adoc
+++ b/README.adoc
@@ -2,18 +2,24 @@
 
 == Sweeter Neovim with Fennel
 
-Write https://fennel-lang.org/[Fennel] code and have https://neovim.io/[Neovim] compile and execute it via Lua. Configure and control your Neovim through the wonders of Lisp!
-
-This is mostly an experiment to see if I can replace my Neovim configuration in my https://github.com/Olical/dotfiles[dotfiles] as well as parts of https://github.com/Olical/conjure[Conjure] with Fennel.
-
-Your code is compiled ahead of time into Lua only if it has changed since you last compiled it. Aniseed also provides a few helper functions which I find useful, you may too!
-
 == TODO
 
  * [ ] Only re-compile if the source file is newer than the destination.
  * [ ] Give it a bug bash / dogfood with my own dotfiles.
  * [ ] Write some documentation.
  * [ ] Talk about this slightly silly experiment at https://oli.me.uk[oli.me.uk].
+
+Write https://fennel-lang.org/[Fennel] code and have https://neovim.io/[Neovim] compile and execute it via Lua. Configure and control your Neovim through the wonders of Lisp!
+
+This is mostly an experiment to see if I can replace my Neovim configuration in my https://github.com/Olical/dotfiles[dotfiles] as well as parts of https://github.com/Olical/conjure[Conjure] with Fennel.
+
+Your code is compiled ahead of time into Lua only if it has changed since you last compiled it. Aniseed also provides a few helper functions which I find useful, you may too!
+
+== Development
+
+Aniseed is written in Fennel and compiled to Lua by the `Makefile` (please read it before executing it!), the compiled files are committed to the repository. Bear this in mind when considering a contribution!
+
+You can use `make test` to ensure the Fennel files in the `test` directory can be compiled and executed without error. It's a _very_ light test that won't catch much though.
 
 == Unlicenced
 
