--- a/README.adoc
+++ b/README.adoc
@@ -1,19 +1,14 @@
-= Aniseed (work in progress)
+= Aniseed (work in progress, please ignore)
 
 == Sweeter Neovim with Fennel
-
-== TODO
-
- * [ ] Only re-compile if the source file is newer than the destination.
- * [ ] Give it a bug bash / dogfood with my own dotfiles.
- * [ ] Write some documentation.
- * [ ] Talk about this slightly silly experiment at https://oli.me.uk[oli.me.uk].
 
 Write https://fennel-lang.org/[Fennel] code and have https://neovim.io/[Neovim] compile and execute it via Lua. Configure and control your Neovim through the wonders of Lisp!
 
 This is mostly an experiment to see if I can replace my Neovim configuration in my https://github.com/Olical/dotfiles[dotfiles] as well as parts of https://github.com/Olical/conjure[Conjure] with Fennel.
 
 Your code is compiled ahead of time into Lua only if it has changed since you last compiled it. Aniseed also provides a few helper functions which I find useful, you may too!
+
+Aniseed also makes https://github.com/norcalli/nvim.lua[nvim.lua] (`(require :aniseed.nvim)`) and https://github.com/kikito/inspect.lua[inspect.lua] (`(require :aniseed.inspect)`) available to you by default.
 
 == Development
 
